updated API folder

--- a/PART_I_api/WeatherPy.ipynb
+++ b/PART_I_api/WeatherPy.ipynb
@@ -197,7 +197,7 @@
     "plt.ylabel('Temperature')\n",
     "plt.title('Latitude Vs. Temperature Graph')\n",
     "plt.show()\n",
-    "fig1.savefig('LatVsTemp.png')"
+    "fig1.savefig('img/LatVsTemp.png')"
    ]
   },
   {
@@ -221,7 +221,7 @@
     "plt.ylabel('Humidity')\n",
     "plt.title('Latitude Vs. Humidity Graph')\n",
     "plt.show()\n",
-    "fig2.savefig('LatVsHum.png')"
+    "fig2.savefig('img/LatVsHum.png')"
    ]
   },
   {
@@ -245,7 +245,7 @@
     "plt.ylabel('Cloudiness')\n",
     "plt.title('Latitude Vs. Cloudiness Graph')\n",
     "plt.show()\n",
-    "fig3.savefig('LatVsCloud.png')"
+    "fig3.savefig('img/LatVsCloud.png')"
    ]
   },
   {
@@ -269,7 +269,7 @@
     "plt.ylabel('Wind Speed')\n",
     "plt.title('Latitude Vs. Wind Speed Graph')\n",
     "plt.show()\n",
-    "fig4.savefig('LatVsSpeed.png')"
+    "fig4.savefig('img/LatVsSpeed.png')"
    ]
   },
   {
